# kenya-counties

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
kenya_counties/: __init__.py
tests/: test_counties.py
