[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kenya-counties"
version = "1.0.0"
description = "Kenya's 47 counties — codes, capitals, regions, 2019 census data. Zero dependencies."
readme = "README.md"
license = {text = "CC-BY-NC-ND-4.0"}
authors = [{name = "Gabriel Mahia", email = "contact@aikungfu.dev"}]
keywords = ["kenya", "counties", "geodata", "africa", "knbs", "census", "reference-data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/gabrielmahia/kenya-counties"
"Bug Tracker" = "https://github.com/gabrielmahia/kenya-counties/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
